[gd_scene load_steps=9 format=2]

[ext_resource path="res://Shaders/ItemSelectionBarItemMaterial.tres" type="Material" id=1]
[ext_resource path="res://UI/ItemSelectionBar/OneItem.png" type="Texture" id=2]
[ext_resource path="res://UI/ItemSelectionBar/SelectionBarItem.gd" type="Script" id=3]
[ext_resource path="res://UI/ItemSelectionBar/UpItem.gd" type="Script" id=4]
[ext_resource path="res://UI/ItemSelectionBar/PriceTag.png" type="Texture" id=5]
[ext_resource path="res://Font/KismetNF.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="SelectionBarItem" type="TextureRect" index="0"]

material = ExtResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 12.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Material" ]

[node name="UpItem" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.0
margin_top = 39.0
margin_right = 13.0
margin_bottom = 14.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
stretch_mode = 5
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility", "custom_styles" ]

[node name="Value" type="TextureRect" parent="UpItem" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = -140.0
margin_right = 283.0
margin_bottom = 31.0
rect_rotation = 90.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="UpItem/Value" index="0"]

self_modulate = Color( 0.129412, 0.0980392, 0.0313726, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = 86.5
margin_right = 61.5
margin_bottom = 177.5
rect_rotation = -90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="LabelShadow" type="Label" parent="UpItem/Value/Label" index="0"]

self_modulate = Color( 1, 0.609375, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = -17.0
margin_right = 24.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "$"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="Label" type="Label" parent="UpItem/Value/Label" index="1"]

self_modulate = Color( 1, 0.84375, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -18.0
margin_top = -18.0
margin_right = 22.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "$"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[connection signal="button_down" from="UpItem" to="UpItem" method="_on_UpItem_button_down"]

[connection signal="button_up" from="UpItem" to="UpItem" method="_on_UpItem_button_up"]

[connection signal="mouse_entered" from="UpItem" to="UpItem" method="_on_UpItem_mouse_entered"]

[connection signal="mouse_exited" from="UpItem" to="UpItem" method="_on_UpItem_mouse_exited"]


